本地模式与多人模式隔离
